Fix scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,21 +20,29 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
+.custom-scrollbar {
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
-::-webkit-scrollbar-thumb {
-  background-color: transparent;
+.custom-scrollbar::-webkit-scrollbar {
+  width: 10px;
+  height: 5px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #c0c0c0;
   border-radius: 10px;
+  border: 2px solid transparent;
+  background-clip: padding-box;
 }
 
-::-webkit-scrollbar-thumb:hover {
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #a0a0a0;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
   background-color: transparent;
+  margin-top: 13px;
+  margin-bottom: 13px;
 }
-
-::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-
